src/test/run-pass/deref-lval.rs


fn main() { let x = @mut 5; *x = 1000; log(debug, *x); }
